--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,16 @@ android {
         }
     }
 }
+repositories{
+    maven { url "http://jzaccone.github.io/SlidingMenu-aar" }
 
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+   compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
+    compile 'com.android.volley:volley:1.0.0'
+
+
 }
