--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,11 @@ repositories{
 
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-   compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
     compile 'com.android.volley:volley:1.0.0'
-
-
+    compile 'com.github.jalasoft:HttpClient:1.0.5'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
 }
